[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "payfast-core-sdk"
version = "1.0.0"
description = "A Python SDK for the PayFast payment gateway — once-off payments, subscriptions, ITN validation, and webhook verification."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "MB Development Pty Ltd", email = "dev@mbdevelopment.co.za" }
]
keywords = ["payfast", "payments", "south africa", "subscriptions", "itn"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "pydantic>=2.0",
]

[project.optional-dependencies]
django = ["django>=4.0"]
flask  = ["flask>=2.3"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "responses>=0.24",
    "ruff>=0.1",
    "mypy>=1.7",
    "black>=23.0",
]

[project.urls]
Homepage   = "https://mbdevelopment.co.za"
Repository = "https://github.com/mb-development/payfast-core-python"
Issues     = "https://github.com/mb-development/payfast-core-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["payfast_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict         = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
